# skeletonml

./: LICENSE  README.md
kinect_postures/: CMakeLists.txt  package.xml
kinect_postures/msg/: Move.msg
kinect_postures/src/: Move.h  centroid.cpp  centroid.h  classifier.cpp  classifier.h  clustermodel.cpp  clustermodel.h  exceptions.h  modeltree.cpp  modeltree.h  movement_tracker.cpp  movement_tracker.h  movements.cpp  posture_tracker.cpp  posture_tracker.h  postures.cpp  randomforest.cpp  randomforest.h  save_angle.cpp  save_raw.cpp  simple_hands_detector.cpp  transformations.cpp  transformations.h
kinect_postures/src/launch/: demo.launch
kisa_moves/: CMakeLists.txt  package.xml
kisa_moves/src/: DataRepresentation.py  GuiTest.py  HistogramClassifier.py  LivePredictor.py  TestApp.py  Transformations.py  UtkaConvert.py  createmp4.sh  data_load.py  euclidean_metrics.py  spherical_metrics.py
kisa_moves/src/structures/: Pose.py  PoseSeries.py  PoseSet.py  Pose_old.py
